--- a/packages/cmp-databinding-start/src/app/app.component.html
+++ b/packages/cmp-databinding-start/src/app/app.component.html
@@ -6,10 +6,21 @@
   <hr />
   <div class="row">
     <div class="col-xs-12">
+      <button class="btn btn-primary" (click)="onChangeFirst()">Change First</button>
+      <button class="btn btn-danger" (click)="onRemoveFirst()">Remove First</button>
       <app-server-element
         *ngFor="let serverElement of serverElements"
         [serverElement]="serverElement"
-      ></app-server-element>
+        [name]="serverElement.name"
+        [content]="serverElement.content"
+      >
+        <p class="card-text" #paraContent>
+          <strong *ngIf="serverElement.type === 'server'" style="color: red;">{{
+            serverElement.content
+          }}</strong>
+          <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
+        </p>
+      </app-server-element>
     </div>
   </div>
 </div>
