feat: Learning @Hostbinding and @HostListner decorator for creating custom directives

--- a/packages/learn-directives/src/app/app.component.html
+++ b/packages/learn-directives/src/app/app.component.html
@@ -12,4 +12,5 @@
   </ul>
   <p appBasicHighlight>Styled via Basic Highlight Directive</p>
   <p appBetterHighlight>Styled via Better Highlight Directive</p>
+  <p appAnotherHighlight>Styled via Another Highlight Directive</p>
 </main>
