feat: Binding to directive properties

--- a/packages/learn-directives/src/app/app.component.html
+++ b/packages/learn-directives/src/app/app.component.html
@@ -13,4 +13,7 @@
   <p appBasicHighlight>Styled via Basic Highlight Directive</p>
   <p appBetterHighlight>Styled via Better Highlight Directive</p>
   <p appAnotherHighlight>Styled via Another Highlight Directive</p>
+  <p appConfigurableHighlight [defaultColor]="'lightPink'" [highlightColor]="'lightGreen'">
+    Styled via Configurable Highlight Directive
+  </p>
 </main>
