--- a/packages/learn-directives/src/app/app.component.html
+++ b/packages/learn-directives/src/app/app.component.html
@@ -13,7 +13,21 @@
   <p appBasicHighlight>Styled via Basic Highlight Directive</p>
   <p appBetterHighlight>Styled via Better Highlight Directive</p>
   <p appAnotherHighlight>Styled via Another Highlight Directive</p>
-  <p appConfigurableHighlight [defaultColor]="'lightPink'" [highlightColor]="'lightGreen'">
+  <p appConfigurableHighlight defaultColor="lightBlue" [highlightColor]="'lightGreen'">
     Styled via Configurable Highlight Directive
   </p>
+  <hr />
+  <p *appNgFalse="isOdd(2)">
+    This is displayed if the condition runs false
+  </p>
+  <hr />
+  <label>
+    <input type="number" (keyup)="onKeyUp($event.target.value)" />
+  </label>
+  <div [ngSwitch]="inputValue">
+    <p *ngSwitchCase="5">Value is 5</p>
+    <p *ngSwitchCase="10">Value is 10</p>
+    <p *ngSwitchCase="15">Value is 15</p>
+    <p *ngSwitchDefault>Some Default Value</p>
+  </div>
 </main>
