--- a/packages/routing-app/src/app/servers/server/server.component.html
+++ b/packages/routing-app/src/app/servers/server/server.component.html
@@ -1,3 +1,3 @@
 <h5>{{ server.name }}</h5>
 <p>Server status is {{ server.status }}</p>
-<app-edit-server></app-edit-server>
+<button class="btn btn-primary" (click)="onEdit()">Edit Server</button>
